--- a/style.css
+++ b/style.css
@@ -42,6 +42,9 @@
 	text-decoration:none;
 	text-shadow:0px 1px 0px #ffffff;
 }
+.btn:hover{
+    background-color: cadetblue;
+}
 /* para o index */
 .bodyText{
     font-family: fantasy;
